--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,10 +1,10 @@
 		<div class="row">
 			<div class="12u">
 
-				<!-- Blog -->
+				<!-- Projects -->
 					<section>
 						<header class="major">
-							<h2>The Blog</h2>
+							<h2>Projects</h2>
 						</header>
 						<div class="row">
 						{% for post in site.posts offset: 0 limit: 2 %}
