--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,7 +407,7 @@
 		transition: background-color 0.2s ease-in-out;
 		background: #3ac984;
 		border-radius: 40px;
-		border: 0;
+		border: w3-border-blue;
 		color: white;
 		cursor: pointer;
 		display: inline-block;
